<resources>
    <string name="app_name">Prayers Times AAP</string>
    <string name="Prayers">Prayers</string>
    <string name="Qibla">Qibla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Monday</string>
    <string name="date">5/27/2023</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="mock_timer">04:32</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="upcoming_prayer">Upcoming Prayer</string>
    <string name="location_logo">location logo</string>
    <string name="compass">compass image</string>
    <string name="approximate_ttv">Approximate Qibla Direction in</string>
    <string name="location">location\n</string>
    <string name="approximate">Approximate Qibla Direction\nMansoura Qism 2 </string>
    <string name="kaaba">kaaba image</string>
    <string name="no_ineterent_connection_available">Internet Connection not Available</string>

</resources>