<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:padding="@dimen/pad_large">

    <TextView
        android:id="@+id/fajr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        tools:text="@string/mock_timer"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dhuhr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        tools:text="@string/mock_timer"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fajr_timer" />


    <TextView
        android:id="@+id/asr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        tools:text="@string/mock_timer"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dhuhr_timer" />


    <TextView
        android:id="@+id/maghrib_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        tools:text="@string/mock_timer"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asr_timer" />


    <TextView
        android:id="@+id/isha_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        tools:text="@string/mock_timer"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maghrib_timer" />

    <TextView
        android:id="@+id/fajr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        android:text="@string/fajr"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dhuhr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        android:text="@string/dhuhr"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fajr" />


    <TextView
        android:id="@+id/asr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        android:text="@string/asr"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dhuhr" />


    <TextView
        android:id="@+id/maghrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        android:text="@string/maghrib"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asr" />


    <TextView
        android:id="@+id/isha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad_large"
        android:text="@string/isha"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maghrib" />

</androidx.constraintlayout.widget.ConstraintLayout>