<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:id="@+id/qibla_layout_constraint"

    xmlns:tools="http://schemas.android.com/tools"
>

    <ImageView
        android:id="@+id/kaaba_IV"
        android:layout_width="@dimen/image_square"
        android:layout_height="@dimen/image_square"
        android:contentDescription="@string/kaaba"
        android:scaleType="fitXY"
        android:src="@drawable/kaaba"
        android:layout_marginTop="@dimen/pad_xxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/compass_imageview"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/compass"
        android:scaleType="fitXY"
        android:layout_marginBottom="@dimen/pad_xxlarge"
        android:src="@drawable/dial"
        android:layout_marginTop="@dimen/pad_xxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kaaba_IV" />
    <ImageView
        android:id="@+id/hand_compass"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/compass"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/pad_xxlarge"
        android:layout_marginBottom="@dimen/pad_xxlarge"
        android:src="@drawable/hands"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kaaba_IV"  />


    <TextView
        android:id="@+id/direction_title_ttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pad_xxlarge"
        android:textStyle="bold"
        android:paddingBottom="@dimen/pad_xxlarge"
        tools:text="100\u00B0"
        android:textSize="@dimen/txt_title"
        app:layout_constraintTop_toBottomOf="@id/compass_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/approximate_ttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approximate_ttv"
        android:paddingTop="@dimen/pad_xxlarge"
        android:textSize="@dimen/txt_large"
        app:layout_constraintTop_toBottomOf="@id/direction_title_ttv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/location_ttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Mansoura Qism 2"
        android:textSize="@dimen/txt_large"
        app:layout_constraintTop_toBottomOf="@id/approximate_ttv"
        app:layout_constraintStart_toStartOf="@id/approximate_ttv"
        app:layout_constraintEnd_toStartOf="@id/direction_ttv"
        />
    <TextView
        android:id="@+id/direction_ttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="100\u00B0"
        android:textSize="@dimen/txt_large"
        app:layout_constraintTop_toBottomOf="@id/approximate_ttv"
        app:layout_constraintStart_toEndOf="@id/location_ttv"
        app:layout_constraintEnd_toEndOf="@id/approximate_ttv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>